# CATUR2026

./: .gitignore  CMakeLists.txt  board.json  detect.py  last_gray.npz  readme.md  run_vision.py  template_mapping.json  templates_cache.npz  templates_cache_v2.npz  templates_cache_v3.npz  vcpkg.json
src/: Overlay.cpp  Overlay.h  ScreenCapture.cpp  ScreenCapture.h  Vision.cpp  Vision.h  main.cpp
